--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,7 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.12.1</version>
                 <configuration>
-                    <configLocation>${basedir}src/main/resources/config/checkstyle.xml</configLocation>
+                    <configLocation>${basedir}\src\main\resources\config\checkstyle.xml</configLocation>
                 </configuration>
             </plugin>
             <plugin>
